<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:key="@string/key_region"
        android:title="@string/title_region"
        android:dialogTitle="@string/tip_region"
        android:entries="@array/region_options"
        android:entryValues="@array/region_values"
        android:defaultValue="@string/default_region"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:key="@string/rank_queue"
        android:title="@string/title_queue"
        android:dialogTitle="@string/tip_queue"
        android:entries="@array/queue_options"
        android:entryValues="@array/queue_values"
        android:defaultValue="@string/default_queue"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>
