<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.league.leaguestats.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_champion"
        android:name="com.league.leaguestats.ui.champion.ChampionFragment"
        android:label="@string/title_champion"
        tools:layout="@layout/fragment_champion">
    </fragment>

    <fragment
        android:id="@+id/navigation_tournament"
        android:name="com.league.leaguestats.ui.tournament.TournamentFragment"
        android:label="@string/title_tournament"
        tools:layout="@layout/fragment_tournament">
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.league.leaguestats.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.league.leaguestats.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <argument
            android:name="searchQuery"
            app:argType="string" />
    </fragment>
</navigation>